@@ -1,5 +1,7 @@
 Post-v2.10.0
 ---------------------
+   - The environment variable OVS_SYSLOG_METHOD, if set, is now used
+     as the default syslog method.
 
 
 v2.10.0 - xx xxx xxxx
